--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header">Yes this is Jimmy God</h1>
+        <h1 class="header">Jimmy Luo</h1>
         <a class="btn" href="/debug"><i class="material-icons right">arrow_forward</i>Debug</a>
     </div>
 </body>
