--- a/src/views/debug.ejs
+++ b/src/views/debug.ejs
@@ -4,9 +4,12 @@
     <%- include("./partials/head.ejs") %>
 </head>
 <body>
-    <div class="container">
-        <h1 class="header">Debug: OK Cool you are Now Debugging</h1>
-        <a class="btn" href="/"><i class="material-icons right">arrow_forward</i>Back to Jimmy</a>
-    </div>
+    <%- include("./partials/body.ejs", {
+        container_title: "Debug: OK Cool you are Now Debugging",
+        button: {
+            target: "/",
+            text: "Back to Jimmy"
+        }
+    }) %>
 </body>
 </html>
