--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,12 @@
     <%- include("./partials/head.ejs") %>
 </head>
 <body>
-    <div class="container">
-        <h1 class="header">Jimmy Luo</h1>
-        <a class="btn" href="/debug"><i class="material-icons right">arrow_forward</i>Debug</a>
-    </div>
+    <%- include("./partials/body.ejs", {
+        container_title: "Jimmy",
+        button: {
+            target: "/debug",
+            text: "Debug"
+        }
+    }) %>
 </body>
 </html>
