Reving the version number to the next stable, continuously deployed state. At this point, I am halfway through templatizing the site. Main thing I'm still trying to figure out is how I want to handle templating common controls like utton and menu.

--- a/src/views/debug.ejs
+++ b/src/views/debug.ejs
@@ -5,10 +5,15 @@
 </head>
 <body>
     <%- include("./partials/body.ejs", {
-        container_title: "Debug: OK Cool you are Now Debugging",
-        button: {
-            target: "/",
-            text: "Back to Jimmy"
+        content: {
+            title: "DEBUG: OK Cool you are Now Debugging",
+            template: "search-homepage",
+            fill: {
+                button: {
+                    target: "/",
+                    text: "Back to Jimmy"
+                }
+            }
         }
     }) %>
 </body>
