--- a/src/views/partials/body.ejs
+++ b/src/views/partials/body.ejs
@@ -1,8 +1,17 @@
 <div class="container">
-    <h1 class="header">
-        <%= container_title %>
-    </h1>
-    <a class="btn" href=<%- button.target %>><i class="material-icons right">arrow_forward</i>
-        <%= button.text %>
-    </a>
+    <div id="header">
+        <%- include("./body/header.ejs") %>
+    </div>
+
+    <div id="content">
+        <% if (typeof content == "undefined") { %>
+            Sorry, the page you are looking for either does not exist or is somehow b0rken.
+        <% } else { %>
+            <%- include("./body/content.ejs", content) %>
+        <% } %>
+    </div>
+
+    <div id="footer">
+        <%- include("./body/footer.ejs") %>
+    </div>
 </div>
