Add soundcloud link, re-order footer name

--- a/src/views/partials/body/header/socials.ejs
+++ b/src/views/partials/body/header/socials.ejs
@@ -28,7 +28,7 @@
                     baseUrl: "https://linkedin.com/in/"
                 },
                 user: {
-                    handle: "zhening-jimmy-luo"
+                    handle: "jimmy-zhening-luo"
                 }
             },
             {
@@ -49,6 +49,16 @@
                 },
                 user: {
                     handle: "1215989421"
+                }
+            },
+            {
+                site: {
+                    title: "SoundCloud",
+                    icon: "",
+                    baseUrl: "https://soundcloud.com/"
+                },
+                user: {
+                    handle: "jimmyluo"
                 }
             }
         ]
