--- a/src/views/partials/body/header/socials.ejs
+++ b/src/views/partials/body/header/socials.ejs
@@ -60,7 +60,17 @@
                 user: {
                     handle: "jimmyluo"
                 }
-            }
+            },
+            {
+              site: {
+                  title: "Substack",
+                  icon: "",
+                  baseUrl: "https://read.jimm.my/"
+              },
+              user: {
+                  handle: ""
+              }
+            },
         ]
     }) %>
 </div>
