Adding YT social

--- a/src/views/partials/body/header/socials.ejs
+++ b/src/views/partials/body/header/socials.ejs
@@ -23,16 +23,6 @@
             },
             {
                 site: {
-                    title: "LinkedIn",
-                    icon: "",
-                    baseUrl: "https://linkedin.com/in/"
-                },
-                user: {
-                    handle: "jimmy-zhening-luo"
-                }
-            },
-            {
-                site: {
                     title: "GitHub",
                     icon: "",
                     baseUrl: "https://github.com/"
@@ -62,14 +52,34 @@
                 }
             },
             {
-              site: {
-                  title: "Substack",
-                  icon: "",
-                  baseUrl: "https://read.jimm.my/"
-              },
-              user: {
-                  handle: ""
-              }
+                site: {
+                    title: "YouTube",
+                    icon: "",
+                    baseUrl: "https://youtube.com/"
+                },
+                user: {
+                    handle: "@jimbojet"
+                }
+            },
+            {
+                site: {
+                    title: "Substack",
+                    icon: "",
+                    baseUrl: "https://read.jimm.my/"
+                },
+                user: {
+                    handle: ""
+                }
+            },
+            {
+                site: {
+                    title: "LinkedIn",
+                    icon: "",
+                    baseUrl: "https://linkedin.com/in/"
+                },
+                user: {
+                    handle: "jimmy-zhening-luo"
+                }
             },
         ]
     }) %>
