Socials: add Duolingo

--- a/src/views/partials/body/header/socials.ejs
+++ b/src/views/partials/body/header/socials.ejs
@@ -63,6 +63,16 @@
             },
             {
                 site: {
+                    title: "Duolingo",
+                    icon: "",
+                    baseUrl: "https://www.duolingo.com/profile/"
+                },
+                user: {
+                    handle: "jimbojet"
+                }
+            },
+            {
+                site: {
                     title: "Substack",
                     icon: "",
                     baseUrl: "https://read.jimm.my/"
