better fonts for Microsoft, Google/Linux/generic, Apple/fallback (if browser does not support Google open font .css rendering)

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,11 +1,12 @@
-@import '@fontsource/fira-mono';
+@import '@fontsource/open-sans';
+@import '@fontsource/oxygen';
+@import '@fontsource/overpass-mono/500.css';
 
 :root {
   --column-margin-top: 4rem;
   --column-width: 42rem;
-  --font-body: 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Open Sans', sans-serif, Oxygen, Ubuntu,
-    Cantarell;
-  --font-mono: 'Lucida Console', 'Fira Mono', monospace;
+  --font-body: 'Segoe UI', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Oxygen';
+  --font-mono: 'Lucida Console', 'Overpass Mono', monospace;
   font-family: var(--font-body);
   --color-text: rgba(0, 0, 0, 0.7);
   color: var(--color-text);
