--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,123 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import '@fontsource/open-sans';
+@import '@fontsource/overpass-mono/500.css';
+
+:root {
+  --column-margin-top: 4rem;
+  --column-width: 42rem;
+  --font-body: 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Open Sans', 'Oxygen';
+  --font-mono: 'Lucida Console', 'Overpass Mono', monospace;
+  font-family: var(--font-body);
+  --color-text: rgba(0, 0, 0, 0.7);
+  color: var(--color-text);
+  --color-theme-1: hsl(216, 69%, 48%);
+  --color-theme-2: hsl(147, 57%, 41%);
+  --color-bg-0: hsl(127, 20%, 80%);
+  --color-bg-1: hsl(127, 10%, 90%);
+  --color-bg-2: hsl(127, 5%, 95%);
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
+  background-color: var(--color-bg-1);
+  background-image: radial-gradient(50% 50% at 50% 50%,
+      rgba(255, 255, 255, 0.75) 0%,
+      rgba(255, 255, 255, 0) 100%),
+    linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  flex: 0.2;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h2,
+p {
+  font-weight: 400;
+}
+
+p {
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-theme-1);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+pre {
+  padding: 0.5em;
+  overflow-x: auto;
+  font-family: var(--font-mono);
+  font-size: 16px;
+  color: var(--color-text);
+  border-radius: 3px;
+  box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
+  background-color: rgba(255, 255, 255, 0.45);
+}
+
+code {
+  font-family: var(--font-mono);
+}
+
+.text-column {
+  display: flex;
+  flex: 0.6;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 48rem;
+}
+
+input,
+button {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+button:focus:not(:focus-visible) {
+  outline: none;
+}
+
+@media (min-width: 720px) {
+  h1 {
+    font-size: 2.4rem;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  width: 1px;
+  height: auto;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+}
