--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
-@import "tailwindcss/base";
+/* @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "tailwindcss/utilities"; */
+
 @import '@fontsource/open-sans';
 @import '@fontsource/overpass-mono/500.css';
 
