--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
 :root {
   font-family: var(--font-body);
   --font-body: 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Open Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --font-header: 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Open Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-header: 'Segoe UI', -apple-system, BlinkMacSystemFont, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --font-mono: 'Lucida Console', 'SFMono-Regular', 'SF Mono', 'Overpass Mono', monospace;
   color: var(--color-text);
   --color-bg-0: hsl(127, 20%, 80%);
