--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,11 @@
 /* @import "tailwindcss"; */
 
-@import '@fontsource/open-sans';
-@import '@fontsource/overpass-mono/500.css';
+@import "./app.theme.css";
+@import "./app.typography.css";
 
 :root {
   font-family: var(--font-body);
-  --font-body: 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Open Sans', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --font-header: 'Segoe UI', -apple-system, BlinkMacSystemFont, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --font-mono: 'Lucida Console', 'SFMono-Regular', 'SF Mono', 'Overpass Mono', monospace;
   color: var(--color-text);
-  --color-bg-0: hsl(127, 20%, 80%);
-  --color-bg-1: hsl(127, 10%, 90%);
-  --color-bg-2: hsl(127, 5%, 95%);
-  --color-text: rgba(0, 0, 0, 0.7);
-  --color-theme-1: hsl(216, 69%, 48%);
-  --color-theme-2: hsl(147, 57%, 41%);
 }
 
 body {
