--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 /* @import "tailwindcss"; */
 
+@import "./app.mobile.css";
 @import "./app.theme.css";
 @import "./app.typography.css";
 
@@ -18,6 +19,32 @@ body {
       rgba(255, 255, 255, 0.75) 0%,
       rgba(255, 255, 255, 0) 100%),
     linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+}
+
+header {
+  font-family: var(--font-header);
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 12px 12px 85px 12px;
+}
+
+main {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 0 auto;
+  padding: 1rem;
+  width: 100%;
+  max-width: 64rem;
 }
 
 section {
@@ -72,15 +99,6 @@ pre {
 
 code {
   font-family: var(--font-mono);
-}
-
-.text-column {
-  display: flex;
-  flex: 0.6;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 48rem;
 }
 
 input,
