--- a/src/routes/Header.css
+++ b/src/routes/Header.css
@@ -1,13 +1,7 @@
-header {
-  font-family: var(--font-header);
-  display: flex;
-  justify-content: space-between;
-}
-
 nav {
   display: flex;
   justify-content: center;
-  --background: rgba(255, 255, 255, 0.7);
+  --nav-background: rgba(255, 255, 255, 0.7);
 }
 
 nav a {
@@ -38,7 +32,7 @@ ul {
   padding: 0;
   height: 3em;
   background-size: contain;
-  background: var(--background);
+  background: var(--nav-background);
 }
 
 li {
@@ -65,5 +59,5 @@ svg {
 }
 
 path {
-  fill: var(--background);
+  fill: var(--nav-background);
 }
