--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,12 @@ body {
     linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 header {
   font-family: var(--font-header);
   display: flex;
