mv min screen back into main file

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,5 @@
 /* @import "tailwindcss"; */
 
-@import "./app.mobile.css";
 @import "./app.theme.css";
 @import "./app.typography.css";
 
@@ -42,6 +41,12 @@ footer {
   padding: 12px 12px 85px 12px;
 }
 
+@media (min-width: 480px) {
+  footer {
+    padding: 12px 0 85px 0;
+  }
+}
+
 main {
   box-sizing: border-box;
   display: flex;
@@ -63,6 +68,12 @@ section {
 
 h1 {
   font-weight: 600;
+}
+
+@media (min-width: 720px) {
+  h1 {
+    font-size: 2.4rem;
+  }
 }
 
 h2,
@@ -115,10 +126,4 @@ button {
 
 button:focus:not(:focus-visible) {
   outline: none;
-}
-
-@media (min-width: 720px) {
-  h1 {
-    font-size: 2.4rem;
-  }
 }
