--- a/src/routes/+page.css
+++ b/src/routes/+page.css
@@ -1,19 +1,29 @@
-h1 {
+.front-content {
   width: 100%;
 }
 
-.welcome {
-  position: relative;
+.front-content h1 {
+  width: 100%;
+}
+
+.front-content .welcome {
   display: block;
+  position: relative;
+}
+
+.front-content .welcome {
+  height: 0;
   padding: 0 0 calc(100% * 495 / 935) 0;
   width: 100%;
-  height: 0;
 }
 
-.welcome img {
-  position: absolute;
+.front-content .welcome img {
   display: block;
+  position: absolute;
+}
+
+.front-content .welcome img {
+  height: 100%;
   top: 0;
   width: 100%;
-  height: 100%;
 }
