--- a/src/routes/Header.css
+++ b/src/routes/Header.css
@@ -1,68 +1,110 @@
-nav {
-  display: flex;
-  justify-content: center;
-  --nav-background: rgba(255, 255, 255, 0.7);
+.app header {
+  font-family: var(--font-header);
 }
 
-nav a {
+.app header {
   display: flex;
+  justify-content: space-between;
+}
+
+.app header .corner {
+  width: 6em;
+  height: 6em;
+}
+
+.app header nav {
+  display: flex;
+  justify-content: center;
+}
+
+.app header nav {
+  --header-nav-background: rgba(255, 255, 255, 0.7);
+}
+
+.app header nav svg {
+  display: block;
+}
+
+.app header nav svg {
+  height: 3em;
+  width: 2em;
+}
+
+.app header nav svg path {
+  fill: var(--header-nav-background);
+}
+
+.app header nav ul {
   align-items: center;
-  padding: 0 0.5rem;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  position: relative;
+}
+
+.app header nav ul {
+  height: 3em;
+  margin: 0;
+  padding: 0;
+}
+
+.app header nav ul {
+  background: var(--header-nav-background);
+}
+
+.app header nav ul li {
+  position: relative;
+}
+
+.app header nav ul li {
   height: 100%;
-  font-size: 0.8rem;
-  font-weight: 700;
-  letter-spacing: 0.1em;
+}
+
+.app header nav ul li[aria-current="page"]::before {
+  content: "";
+  position: absolute;
+}
+
+.app header nav ul li[aria-current="page"]::before {
+  --header-nav-tab-size: 6px;
+}
+
+.app header nav ul li[aria-current="page"]::before {
+  height: 0;
+  left: calc(50% - var(--header-nav-tab-size));
+  top: 0;
+  width: 0;
+}
+
+.app header nav ul li[aria-current="page"]::before {
+  border: var(--header-nav-tab-size) solid transparent;
+}
+
+.app header nav ul li[aria-current="page"]::before {
+  border-top: var(--header-nav-tab-size) solid var(--color-theme-1);
+}
+
+.app header nav ul li a {
+  align-items: center;
+  display: flex;
   text-decoration: none;
   text-transform: uppercase;
-  color: var(--color-text);
   transition: color 0.2s linear;
 }
 
-a:hover {
-  color: var(--color-theme-1);
-}
-
-ul {
-  list-style: none;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  height: 3em;
-  background-size: contain;
-  background: var(--nav-background);
-}
-
-li {
-  position: relative;
+.app header nav ul li a {
+  font-size: 0.8rem;
+  font-weight: 700;
   height: 100%;
+  letter-spacing: 0.1em;
+  padding: 0 0.5rem;
 }
 
-li[aria-current="page"]::before {
-  position: absolute;
-  top: 0;
-  left: calc(50% - var(--size));
-  --size: 6px;
-  width: 0;
-  height: 0;
-  border: var(--size) solid transparent;
-  border-top: var(--size) solid var(--color-theme-1);
-  content: "";
+.app header nav ul li a {
+  color: var(--color-text);
 }
 
-svg {
-  display: block;
-  width: 2em;
-  height: 3em;
-}
-
-path {
-  fill: var(--nav-background);
-}
-
-.corner {
-  width: 6em;
-  height: 6em;
+.app header nav ul li a:hover {
+  color: var(--color-theme-1);
 }
