--- a/src/routes/+layout.css
+++ b/src/routes/+layout.css
@@ -7,27 +7,16 @@
   min-height: 100vh;
 }
 
-.app main {
+main {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
 
-.app main {
+main {
   flex: 1;
   margin: 0 auto;
   max-width: 64rem;
   padding: 1rem;
   width: 100%;
-}
-
-.app main section {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.app main section {
-  flex: 0.2;
 }
