--- a/src/routes/Header.css
+++ b/src/routes/Header.css
@@ -1,40 +1,40 @@
-.app header {
+header {
   font-family: var(--font-header);
 }
 
-.app header {
+header {
   display: flex;
   justify-content: space-between;
 }
 
-.app header .corner {
+.corner {
   width: 6em;
   height: 6em;
 }
 
-.app header nav {
+nav {
   display: flex;
   justify-content: center;
 }
 
-.app header nav {
-  --header-nav-background: rgba(255, 255, 255, 0.7);
+nav {
+  --nav-background: rgba(255, 255, 255, 0.7);
 }
 
-.app header nav svg {
+nav svg {
   display: block;
 }
 
-.app header nav svg {
+nav svg {
   height: 3em;
   width: 2em;
 }
 
-.app header nav svg path {
-  fill: var(--header-nav-background);
+nav svg path {
+  fill: var(--nav-background);
 }
 
-.app header nav ul {
+nav ul {
   align-items: center;
   background-size: contain;
   display: flex;
@@ -43,49 +43,49 @@
   position: relative;
 }
 
-.app header nav ul {
+nav ul {
   height: 3em;
   margin: 0;
   padding: 0;
 }
 
-.app header nav ul {
-  background: var(--header-nav-background);
+nav ul {
+  background: var(--nav-background);
 }
 
-.app header nav ul li {
+nav ul li {
   position: relative;
 }
 
-.app header nav ul li {
+nav ul li {
   height: 100%;
 }
 
-.app header nav ul li[aria-current="page"]::before {
+nav ul li[aria-current="page"]::before {
   content: "";
   position: absolute;
 }
 
-.app header nav ul li[aria-current="page"]::before {
-  --header-nav-tab-size: 6px;
+nav ul li[aria-current="page"]::before {
+  --nav-tab-size: 6px;
 }
 
-.app header nav ul li[aria-current="page"]::before {
+nav ul li[aria-current="page"]::before {
   height: 0;
-  left: calc(50% - var(--header-nav-tab-size));
+  left: calc(50% - var(--nav-tab-size));
   top: 0;
   width: 0;
 }
 
-.app header nav ul li[aria-current="page"]::before {
-  border: var(--header-nav-tab-size) solid transparent;
+nav ul li[aria-current="page"]::before {
+  border: var(--nav-tab-size) solid transparent;
 }
 
-.app header nav ul li[aria-current="page"]::before {
-  border-top: var(--header-nav-tab-size) solid var(--color-theme-1);
+nav ul li[aria-current="page"]::before {
+  border-top: var(--nav-tab-size) solid var(--color-theme-1);
 }
 
-.app header nav ul li a {
+nav ul li a {
   align-items: center;
   display: flex;
   text-decoration: none;
@@ -93,7 +93,7 @@
   transition: color 0.2s linear;
 }
 
-.app header nav ul li a {
+nav ul li a {
   font-size: 0.8rem;
   font-weight: 700;
   height: 100%;
@@ -101,10 +101,10 @@
   padding: 0 0.5rem;
 }
 
-.app header nav ul li a {
+nav ul li a {
   color: var(--color-text);
 }
 
-.app header nav ul li a:hover {
+nav ul li a:hover {
   color: var(--color-theme-1);
 }
