--- a/src/routes/_social/Socials.css
+++ b/src/routes/_social/Socials.css
@@ -24,8 +24,8 @@ menu {
 
 menu li {
   flex: 0 0 auto;
-  height: 2.4rem;
-  width: 2.4rem;
+  block-size: 2.4rem;
+  inline-size: 2.4rem;
 }
 
 menu li img {
@@ -34,5 +34,5 @@ menu li img {
 
 menu li img {
   aspect-ratio: 1/1;
-  height: 100%;
+  block-size: 100%;
 }
