Add Consolas to typography mono variable list

--- a/src/style/variables/typography.css
+++ b/src/style/variables/typography.css
@@ -13,6 +13,7 @@
     'Segoe UI Emoji',
     'Segoe UI Symbol';
   --typography-mono:
+    'Consolas',
     'Lucida Console',
     'SFMono-Regular',
     'SF Mono';
