Update typography variable format in CSS file

--- a/src/style/variables/typography.css
+++ b/src/style/variables/typography.css
@@ -13,7 +13,7 @@
     'Segoe UI Emoji',
     'Segoe UI Symbol';
   --typography-mono:
-    'Consolas',
+    Consolas,
     'Lucida Console',
     'SFMono-Regular',
     'SF Mono';
