--- a/src/routes/_layout/Header.css
+++ b/src/routes/_layout/Header.css
@@ -10,7 +10,7 @@ header {
 }
 
 nav {
-  --nav-background: rgba(255, 255, 255, 0.7);
+  --nav-background: hsl(0 0% 100% / 0.7);
   display: flex;
   justify-content: center;
 }
