--- a/src/style/variables/theme.css
+++ b/src/style/variables/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --color-bg-0: hsl(127, 20%, 80%);
-  --color-bg-1: hsl(127, 10%, 90%);
-  --color-bg-2: hsl(127, 5%, 95%);
-  --color-text: rgba(0, 0, 0, 0.7);
-  --color-theme-1: hsl(216, 69%, 48%);
-  --color-theme-2: hsl(147, 57%, 41%);
+  --color-bg-0: hsl(127 20% 80%);
+  --color-bg-1: hsl(127 10% 90%);
+  --color-bg-2: hsl(127 5% 95%);
+  --color-text: hsl(0 0% 0% / 0.7);
+  --color-theme-1: hsl(216 69% 48%);
+  --color-theme-2: hsl(147 57% 41%);
 }
